# BDME

./: .gitignore  Examples.ipynb  README.md  main.py  pyproject.toml  requirements.txt
Presentation/: Big_data_daily.ipynb  Examples.ipynb  smoothing_spline.py
Project/: Strava-Data.ipynb
