[project]
name = "BigData"
version = "0.1.0"
description = "Project to create examples for Chapter 7 of IRLS book (and section 3.5)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pygam>=0.12.0",
    "scikit-learn>=1.8.0",
]
